// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select renders 1`] = `
<div
  class="TDS_Box-modules__betweenBottomMargin-2___31zX_ TDS_Box-modules__stack___33m4D"
>
  <div
    class="row justifyContentSpaceBetween relative"
  >
    <label
      for="the-select"
    >
      <span
        class="TDS_Box-modules__betweenRightMargin-2___20pzC TDS_Box-modules__inline___jTHcz alignCenter"
      >
        <span
          class="TDS_Typography-modules__medium___1rxfE TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__boldFont___2YS3O TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__color___2CNH8"
        >
          The select
        </span>
      </span>
    </label>
  </div>
  <div
    class="wrapper"
  >
    <select
      aria-invalid="false"
      class="default select"
      id="the-select"
      style="padding-right:calc(16px + 2rem)"
    >
      <option
        value="value-1"
      >
        text one
      </option>
      <option
        value="value-2"
      >
        text two
      </option>
    </select>
    <div
      class="TDS_Box-modules__betweenRightMargin-3___1dOvx TDS_Box-modules__inline___jTHcz iconsPosition"
    >
      <div
        class="fixLineHeight"
      >
        <i
          aria-hidden="true"
          class="TDS_Icon-modules__iconCaretDown___3by8b TDS_Icon-modules__icon___13xYd TDS_Icon-modules__primary___2UY-N TDS_Icon-modules__size16___1pm12"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Select renders with a feedback state and icon 1`] = `
<div
  class="TDS_Box-modules__betweenBottomMargin-2___31zX_ TDS_Box-modules__stack___33m4D"
>
  <div
    class="row justifyContentSpaceBetween relative"
  >
    <label
      for="the-select"
    >
      <span
        class="TDS_Box-modules__betweenRightMargin-2___20pzC TDS_Box-modules__inline___jTHcz alignCenter"
      >
        <span
          class="TDS_Typography-modules__medium___1rxfE TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__boldFont___2YS3O TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__color___2CNH8"
        >
          The select
        </span>
      </span>
    </label>
  </div>
  <div
    class="wrapper"
  >
    <select
      aria-invalid="true"
      class="error select"
      id="the-select"
      style="padding-right:calc(32px + 3rem)"
    >
      <option
        value="value-1"
      >
        text one
      </option>
      <option
        value="value-2"
      >
        text two
      </option>
    </select>
    <div
      class="TDS_Box-modules__betweenRightMargin-3___1dOvx TDS_Box-modules__inline___jTHcz iconsPosition"
    >
      <div
        style="transition:opacity 100ms ease-in-out;opacity:1"
      >
        <div
          class="fixLineHeight"
        >
          <i
            aria-label="The value of this input field is invalid."
            class="TDS_Icon-modules__iconExclamationPointCircle___1HgRN TDS_Icon-modules__icon___13xYd TDS_Icon-modules__error___yuB9x TDS_Icon-modules__size16___1pm12"
          />
        </div>
      </div>
      <div
        class="fixLineHeight"
      >
        <i
          aria-hidden="true"
          class="TDS_Icon-modules__iconCaretDown___3by8b TDS_Icon-modules__icon___13xYd TDS_Icon-modules__error___yuB9x TDS_Icon-modules__size16___1pm12"
        />
      </div>
    </div>
  </div>
</div>
`;
